compiler/testData/loadJava/compiledJava/kotlinSignature/error/WrongProjectionKind.java
package test;

import java.util.*;

public class WrongProjectionKind {
    public List<Number> copy(Number[] from, Number[] to) {
        throw new UnsupportedOperationException();
    }
}
